--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # builds
-dist
+#dist
 # Node modules
 node_modules/
 # Ignore files with sensitive environment variables
@@ -10,7 +10,7 @@ node_modules/
 # Parcel cache
 .cache/
 # Ignore IDE configuration files
-.idea/ 
+.idea/
 .vscode/
 # Logs
 logs
