--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awesome-react-stepper-dennis",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Highly Customizable Multi Stepper Component for React",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -49,6 +49,7 @@
     "copyfiles": "^2.4.1",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^4.9.3"
   }
 }
